2007-04-18  Andrew Haley  <aph@redhat.com>

	* gnu/java/rmi/server/UnicastConnectionManager.java
	(UnicastConnectionManager(int port, RMIServerSocketFactory)):
	Listen on "localhost", not localhost.

2007-04-18  Dalibor Topic  <robilad@kaffe.org>

	* include/GtkDragSourceContextPeer.h: Removed, renamed to ..

	* include/gnu_java_awt_dnd_peer_gtk_GtkDragSourceContextPeer.h:
	New file.

	* native/jni/gtk-peer/GtkDragSourceContextPeer.c: Include 
	gnu_java_awt_dnd_peer_gtk_GtkDragSourceContextPeer.h.

	* include/Makefile.am (GTKPEER_H_FILES): Renamed
	GtkDragSourceContextPeer.h to 
	gnu_java_awt_dnd_peer_gtk_GtkDragSourceContextPeer.h
	per current convention. Use portable construct to create
	gtk and libxmlj peer headers. Depend on the java source code, 
	rather then the class files in order to avoid spurious 
	regeneration.

2007-04-18  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Use portable construct to create
	qt peer headers. Depend on the java source code, 
	rather then the class files in order to avoid spurious 
	regeneration.

2007-04-18  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Use portable construct to create
	alsa and dssi peer headers. Depend on the java source code, 
	rather then the class files in order to avoid spurious 
	regeneration.
	
2007-04-18  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Use portable construct to create
	gconf peer header. Depend on the java source code, rather
	the class file to avoid spurious regeneration.

2007-04-18  Dalibor Topic  <robilad@kaffe.org>

	* include/gnu_java_awt_peer_qt_QtGraphicsEnvironment.h:
	Removed empty header file.

	* include/Makefile.am (QTPEER_H_FILES):
	Removed gnu_java_awt_peer_qt_QtGraphicsEnvironment.h.

2007-04-18  Dalibor Topic  <robilad@kaffe.org>

	* native/jni/xmlj/xmlj_xpath.c: Don't include 
	gnu_xml_libxmlj_dom_GnomeXPathNSResolver.h.

	* include/gnu_xml_libxmlj_dom_GnomeXPathNSResolver.h:
	Removed empty header file.
